public/css/small.css
*, *:before, *:after {
    -webkit-box-sizing: inherit;
    box-sizing: border-box;
}

html, body {
    width: 100%;
    padding: 0;
    margin: 0;
}

body {
    line-height: 1.5;
    font-family: sans-serif;
}

main {
    width: 100%;
    padding: 0 1rem 0;
    margin: 0 0 6rem 0;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    padding: 1rem;
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ CLASSES ------------------------------  */

.hide-small {
    display: none;
}

.card {
    margin: 1rem auto;
    box-shadow: 2px 2px 4px #bbb;
}

.sans-serif {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.caps {
    text-transform: uppercase;
}

.border1 {
    border: 1px solid !important;
}

.border2 {
    border: 2px solid !important;
}

.border-bot1 {
    border-bottom: 1px groove;
}

.no-under {
    text-decoration: none;
}

.divider {
    height: 1px;
    overflow: hidden;
    background-color: #eee;
    width: 80%;
    margin: 0 auto;
}

.center-block {
    display: block !important;
    margin: 0 auto;
}

.block {
    display: block !important;
}

.circle {
    border-radius: 100%;
}

.float-r {
    float: right;
}

.center-txt { 
    text-align: center;
}

.right-txt {
    text-align: right;
}

.pad-0_5 {
    padding: .5rem;
}

.pad-top-4 {
    padding-top: 4rem;
}

.pad-bot-2 {
    padding-bottom: 2rem;
}

.pad-right-0_5 {
    padding-right: .5rem;
}

.pad-right-1 {
    padding-right: 1rem;
}

.no-marg {
    margin: 0;
}

.marg-top-1 {
    margin-top: 1rem;
}

.marg-top-0_5 {
    margin-top: .5rem;
}

.marg-right-0_5 {
    margin-right: .5rem;
}

.marg-bot-0 {
    margin-bottom: 0;
}

.marg-bot-05 {
    margin-bottom: .5rem;
}

.section {
    padding: 1.25rem 0;
}

.font075 {
    font-size: .75rem;
}

.font08 {
    font-size: .8rem;
}

.font09 {
    font-size: .9rem;
}

.font2_5 {
    font-size: 2.5rem;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

.wide-fit {
    width: fit-content;
}

.bg-grey.darken4 {
    background-color: #222;
}

.bg-grey.darken3 {
    background-color: #424242;
}

.bg-red.darken1 {
    background-color: #E53935;
}

.bg-blue.lighten2 {
    background-color: dodgerblue;
}

.bg-tan {
    background-color: burlywood;
}

.bg-tan.lighten2 {
    background-color: antiquewhite;
}

.bg-tan.lighten3 {
    background-color: oldlace;
}

.bg-none {
    background-color: unset;
}

.btn {
    display: inline-block;
    border: unset;
    width: fit-content;
    padding: .5rem .75rem;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
    box-shadow: 2px 2px 2px #bbb;
    cursor: pointer;
}

.btn:hover {
    box-shadow: 3px 3px 3px #777;
}

.blue.lighten2 {
    color: dodgerblue;
}

.white {
    color: white;
}

.black {
    color: black;
}

.tan {
    color: bisque;
}

.red.darken1 {
    color: #E53935;
}

.hide {
    display: none;
}

.grid10 {
    display: grid;
    grid-template-columns: 10fr 1fr;
}

.scroll-table-head {
    background-color: #222;
    color: white;
}

.scroll-row:nth-of-type(even) {
    background-color: #d2d2d2;
}

.scroll-row:nth-of-type(even) .btn {
    box-shadow: 2px 2px 2px #777;
}

.scroll-row td {
    padding: .5rem .3rem;
}

.user-item {
    margin: 0 0 2rem 0;
    width: fit-content;
}

/* ---------------------------------------------------------------------- */
/* ------------------------------ IDS ----------------------------------  */

#header-wrap {
    margin: 0 0 1rem 0;
    padding: .8rem 1rem .5rem 1rem;
    display: flex;
    justify-content: space-between;
}

#logo-hdr {
    display: block;
    margin: 0 auto;
    font-family: sans-serif;
    text-decoration: none;
    font-size: 2rem;
    color: white;
    z-index: 2;
}

#logo-brand {
    border-top: 4px groove white;
    border-bottom: 4px groove white;
}

#logo-brand:hover {
    color: white;
}

#logo-img {
    margin: 0 0 .40rem 0;
    vertical-align: middle;
    width: 50px;
}

#add-btn {
    /* temporary */
    position: absolute;
    bottom: 10px;
    right: 10px;
    width: 45px;
    height: 45px;
    border-radius: 100%;
    display: grid;
    justify-content: center;
    align-content: center;
    color: white;
    font-size: 1.4rem;
    text-decoration: none;
}

#add-btn:hover {
    border: 1px solid bisque;
    box-shadow: 0 0 5px bisque;
}

#scroll-table {
    font-family: monospace;
    table-layout: fixed;
    width: 100%;
    word-wrap: break-word;
    hyphens: auto;
}

#scroll-table a {
    text-decoration: none;
    color: dodgerblue;
}

#add_edit-form .row {
    margin: 0 0 .75rem 0;
}

#add_edit-form input {
    padding: .5rem;
    border: 1px solid black;
    border-radius: 5px;
}

#add_edit-form .btn {
    font-size: 1.2rem;
    margin: 1rem 1rem 1rem 0;
    padding: 1rem;
    line-height: normal;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    appearance: none;
    -webkit-appearance: none;
}

#add_edit-form textarea {
    font-size: 1.5rem;
}


/* ---------------------------------------------------------------------- */
/* ------------------------------ NAV TOGGLE ---------------------------  */

.hambars {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 44px;
    position: absolute;
    top: 20px;
    right: 10px;
    z-index: 100;
}

.hambars span,
.hambars span:before,
.hambars span:after {
    content: " ";
    height: 4px;
    width: 30px;
    position: absolute;
    background-color: white;
    transition: 150ms ease-in-out;
    border-radius: 5px;
}

.hambars:hover > span,
.hambars:hover > span:before,
.hambars:hover > span:after {
    background-color: bisque;
}

.hambars span:before {
    top: -10px;
}

.hambars span:after {
    top: 10px;
}

.open span {
    background: transparent;
}

.open span:before, .open span:after {
    top: 0;
    width: 33.3333333333px;
}

.open span:before {
    transform: rotate(-315deg);
}

.open span:after {
    transform: rotate(135deg);
}

.open:hover > span {
    background-color: transparent;
}

.open:hover > span:before, .open:hover > span:after {
    background-color: white;
}

.navMenu {
    position: absolute;
    top: -40vh;
    right: 0;
    width: 180px;
    height: fit-content;
    padding: 6rem 0 0 0;
    border-radius: 0 0 0 10px;
    font-size: 1.3em;
    display: flex;
    flex-direction: column;
    justify-content: end;
    transition: 250ms ease-out;
    opacity: 98%;
}

.navMenu ul {
    list-style-type: none;
    margin: 0 auto .5rem;
    padding: 0;
}

.navMenu a {
    display: block;
    margin: 1rem 0;
    font-family: sans-serif;
    color: transparent;
    text-decoration: none;
}

.navMenu.open a {
    color: white;
    transition: 215ms step-end;
}

.navMenu.open {
    top: 0;
}

